--- a/index.htm
+++ b/index.htm
@@ -22,10 +22,10 @@
     </header>
 
     <div class="conteudo">
-        Olá boa tarde, Primeiramente convido você e participar do nosso jogo de Tabuleiro humano, que tem a finalidade de trazer um pouco de informação e cultura sobre o futebol feminino dos paises Latinos-americanos. <br> <br>
-        <div id="img1_div"><img src="futebol_feminino.jpg" id="img1" alt=""></div><br>
+        Olá boa tarde, Primeiramente convido você a participar do nosso jogo de Tabuleiro humano, que tem a finalidade de trazer um pouco de informação e cultura sobre o futebol feminino dos paises Latinos-americanos. <br> <br>
+        <div id="img1_div"><img src="futebol_feminino.jpg" id="img1" alt=""></div><br> <br><br>
     
-        Como em qualquer Jogo de Tabuleiro se tem as Regras. <a id="regras" href="Regras.html">Click aqui</a> para conferir todas as regrinhas do nosso jogo
+        Como em qualquer Jogo de Tabuleiro exitem as Regras. <a id="regras" href="Regras.html">Click aqui</a> para conferir todas as regrinhas do nosso jogo.
     </div>
     <br>
     <footer><div id="div_footer">
